front end successfully injected

--- a/public/login.html
+++ b/public/login.html
@@ -61,20 +61,9 @@
                         
                         <div class="text-center">
                             <p class="mb-0">Don't have an account?</p>
-                            <a href="register" class="btn btn-outline-primary btn-sm mt-2">
+                            <a href="register" class="btn btn-outline-danger btn-sm mt-3">
                                 <i class="fas fa-user-plus me-2"></i>Register as Donor
                             </a>
-                        </div>
-                        
-                        <!-- Demo Credentials -->
-                        <div class="mt-4 p-3 bg-light rounded">
-                            <h6 class="text-muted mb-2">Demo Credentials:</h6>
-                            <small class="text-muted d-block">
-                                <strong>Collector:</strong> collector / collector123
-                            </small>
-                            <small class="text-muted d-block">
-                                <strong>Note:</strong> Camp Officials are registered by Collectors
-                            </small>
                         </div>
                     </div>
                 </div>
