--- a/public/register.html
+++ b/public/register.html
@@ -86,7 +86,7 @@
                         
                         <div class="text-center">
                             <p class="mb-0">Already have an account?</p>
-                            <a href="login" class="btn btn-outline-primary btn-sm mt-2">
+                            <a href="login" class="btn btn-outline-danger btn-sm mt-2">
                                 <i class="fas fa-sign-in-alt me-2"></i>Login Here
                             </a>
                         </div>
