--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark nav fixed-top">
         <div class="container">
             <a class="navbar-brand fw-bold" href="/">
                 <i class="fas fa-hands-helping me-2"></i>ReliefHub
@@ -42,8 +42,8 @@
         <div class="container">
             <div class="row align-items-center min-vh-100">
                 <div class="col-lg-6">
-                    <h1 class="display-4 fw-bold mb-4">
-                        Managing Disaster Relief <span class="text-primary">Together</span>
+                    <h1 class="display-4 fw-bold mb-heading">
+                        Managing Disaster Relief <span class="together">Together</span>
                     </h1>
                     <p class="lead mb-4">
                         ReliefHub is a comprehensive donation management system that connects disaster relief camps, 
@@ -60,7 +60,7 @@
                 </div>
                 <div class="col-lg-6 text-center">
                     <div class="hero-image">
-                        <i class="fas fa-hands-helping text-primary" style="font-size: 15rem; opacity: 0.1;"></i>
+                        <i class="fas fa-hands-helping text-hand" style="font-size: 15rem; opacity: 100%;"></i>
                     </div>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                 <div class="col-lg-4 mb-4">
                     <div class="card h-100 border-0 shadow-sm">
                         <div class="card-body text-center">
-                            <i class="fas fa-campground text-primary fs-1 mb-3"></i>
+                            <i class="fas fa-campground text-nav fs-1 mb-3"></i>
                             <h4>Camp Management</h4>
                             <p class="text-muted">Efficiently manage disaster relief camps, track capacity, and coordinate with officials.</p>
                         </div>
@@ -89,7 +89,7 @@
                 <div class="col-lg-4 mb-4">
                     <div class="card h-100 border-0 shadow-sm">
                         <div class="card-body text-center">
-                            <i class="fas fa-boxes text-primary fs-1 mb-3"></i>
+                            <i class="fas fa-boxes text-nav fs-1 mb-3"></i>
                             <h4>Inventory Tracking</h4>
                             <p class="text-muted">Real-time inventory management with low-stock alerts and automated tracking.</p>
                         </div>
@@ -98,7 +98,7 @@
                 <div class="col-lg-4 mb-4">
                     <div class="card h-100 border-0 shadow-sm">
                         <div class="card-body text-center">
-                            <i class="fas fa-heart text-primary fs-1 mb-3"></i>
+                            <i class="fas fa-heart text-nav fs-1 mb-3"></i>
                             <h4>Transparent Donations</h4>
                             <p class="text-muted">Track donations from source to destination with complete transparency.</p>
                         </div>
@@ -155,7 +155,7 @@
         <div class="container text-center">
             <h2 class="display-5 fw-bold mb-4">Ready to Make a Difference?</h2>
             <p class="lead mb-4">Join our platform and help us create a more efficient disaster relief system</p>
-            <a href="register" class="btn btn-light btn-lg me-3">
+            <a href="register" class="btn btn-light btn-lg me-3" ;>
                 <i class="fas fa-user-plus me-2"></i>Register as Donor
             </a>
             <a href="login" class="btn btn-outline-light btn-lg">
@@ -167,7 +167,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-white py-4">
         <div class="container text-center">
-            <p class="mb-0">&copy; 2024 ReliefHub. All rights reserved. | Built for disaster relief management</p>
+            <p class="mb-0"> ReliefHub.Built for disaster relief management</p>
         </div>
     </footer>
 
